# sonnas-patisserie

./: .env.example  .gitignore  Cargo.toml  README.md  vercel.json
.cargo/: audit.toml
.github/workflows/: ci.yml
api/: main.rs
docs/: ARCHITECTURE.md  BRAND.md  COMPLIANCE.md  DEPLOYMENT.md  WHATSAPP_TEMPLATES.md
migrations/: 0001_schema.sql  0002_seed.sql  0003_rls.sql  0004_real_photos.sql  0005_growth.sql
public/: payment.js  style.css
src/: auth.rs  cart.rs  db.rs  lib.rs  main.rs  models.rs  razorpay.rs  whatsapp.rs
src/bot/: claude.rs  faq.rs  mod.rs
src/routes/: admin.rs  checkout.rs  mod.rs  store.rs  tasks.rs  webhook.rs
templates/: 404.html  _card.html  base.html  cart.html  category.html  checkout.html  contact.html  index.html  order.html  payment.html  pricing.html  privacy.html  product.html  refunds.html  shipping.html  terms.html
templates/admin/: base.html  customers.html  dashboard.html  login.html  order_detail.html  orders.html  product_form.html  products.html  promotion_form.html  promotions.html
tests/: core.rs
